<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
  
    <LinearLayout  
        android:layout_width="match_parent"
    	 android:layout_height="0dp"
    	 android:layout_weight="2"
         android:orientation="vertical" 
         android:background="#4CA4FF"
         android:gravity="center_vertical">
   		 <TextView
      	  	android:id="@+id/temperature"
       	 	android:layout_width="match_parent"
        	android:layout_height="wrap_content" 
        	android:text="@string/temperature"
        	android:textSize="50sp"
        	android:gravity="center" 
        	android:textColor="#FFFFFF"/>
    
    	<TextView
        	android:id="@+id/description"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" 
        	android:textSize="30sp"
        	android:text="@string/description"
        	android:gravity="center"
        	android:textColor="#FFFFFF" />
    </LinearLayout>
    
    <View
   			android:layout_width="match_parent"
    		android:layout_height="0.5dp"
    		android:background="#447EA5"/>
    
    <LinearLayout  
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
        android:orientation="vertical"
        android:background="#33A6FF">
    	
        <LinearLayout  
        	android:layout_width="match_parent"
    		android:layout_height="50dp"
       	 	android:orientation="horizontal">
    		<TextView
    	   		android:id="@+id/details"
    	    	android:layout_width="0dp"
    	    	android:layout_height="match_parent"
    	    	android:layout_weight="1"
    	    	android:gravity="center_vertical"
    	    	android:text="@string/details"
    	    	android:textSize="18sp"
    	    	android:textColor="#FFFFFF"
    	    	android:alpha="0.6"/>
    		
    		<TextView android:id="@+id/date"
    		    android:layout_width="0dp"
    	    	android:layout_height="match_parent"
    	    	android:layout_weight="1"
    		    android:gravity="center_vertical|center"
    		    android:padding="5dp"
    		    android:text="@string/date"
    		    android:textSize="18sp"
    	    	android:textColor="#FFFFFF"
    	    	android:alpha="0.8"/>"
    	</LinearLayout>
       <View
   			android:layout_width="match_parent"
    		android:layout_height="0.5dp"
    		android:background="#447EA5"/>
    	<LinearLayout  
        	android:layout_width="match_parent"
    	 	android:layout_height="0dp"
    	 	android:layout_weight="2"
         	android:orientation="horizontal">
         	<TextView
         	    android:id="@+id/wind"
         	    android:layout_height="match_parent"
         	    android:layout_width="0dp"
         	    android:layout_weight="1"
         	    android:gravity="center_vertical|center"
         	    android:text="@string/winddefault"
         	    android:textSize="20sp"
         	    android:textColor="#FFFFFF"/>
         	<View
    			android:layout_width="0.5dp"
    			android:layout_height="match_parent"
    			android:background="#447EA5"/>
         	
         	 <TextView
         	    android:id="@+id/SunRiseSet"
         	    android:layout_height="match_parent"
         	    android:layout_width="0dp"
         	    android:layout_weight="1"
         	    android:gravity="center_vertical|center"
         	    android:text="@string/sunriseset"
         	    android:textSize="20sp"
         	    android:textColor="#FFFFFF"/>
         </LinearLayout>
    	
    </LinearLayout>

</LinearLayout>
